# Linux-yocto-Excersises

./: .gitignore  README.md
linux/: bb_download.sh  download_dependencies.sh
linux/1-building_native_application/: .gitignore  Makefile  Readme.md
linux/2-building_cross_compiled_application/: Prepare_Env.sh  Readme.md
linux/3-uboot/: Readme.md  format-sd-loop-dev.sh
linux/4-linux_cross_compilation/: Readme.md  beaglebone-crossCompiler-setenv.sh
linux/5-init_applications/: readme.md
linux/6-deviceTree/: readme.md
linux/code/: README.md  bb_arm-cortex_a8-linux-gnueabi  bb_download.sh  build_all.sh  busybox_build.sh  cpImagesTFTP.sh  cp_to_nfs.sh  ctng_BuildToolchain.sh  ctng_bb_BuildToolchain.sh  ctng_qemu_BuildToolchain.sh  download_dep.sh  download_dependencies.sh  linux_build.sh  parse_config.sh  qemu-create-virtual-sd.sh  qemu-crossCompiler-setenv.sh  qemu-release-virtual-sdcard.sh  qemu-start.sh  qemu_arm-cortex_a8-linux-gnueabi  qemu_download.sh  qemu_vexpress_ca9x4_defconfig  rpi_4_mmc_1_2_defconfig  setenv_crossCompiler.sh  targets.conf  uboot_bb_build.sh  uboot_build.sh  uboot_qemu_build.sh
linux/questions/: beaglebone-startup.md  readme.md
yocto/: BitBake cheat sheet.md  clone_build_yocto_rasp.sh
yocto/1.building_Raspberrypi_image/: readme.md  yocto_project_concepts.md
yocto/vsomeip/applications_code/: CMakeLists.txt  run.sh  transfer_files  vsomeip.json
yocto/vsomeip/applications_code/client/: CMakeLists.txt  client-app.cpp  vsomeip.json
yocto/vsomeip/applications_code/server/: CMakeLists.txt  server-app.cpp  vsomeip.json
(+39 files in other folders)
